kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jenkins-master
  name: jenkins-master
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins-master
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: jenkins-master
        environment: dev
    spec:
      containers:
        - image: rfaguiar/jenkins-as-code:2.6.0
          name: jenkins-master
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
            - name: jnlp
              containerPort: 50000
          readinessProbe:
            httpGet:
              path: /login
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 10
#          volumeMounts:
#            - name: jenkins-home
#              mountPath: "/var/jenkins_home"
#      volumes:
#        - name: jenkins-home
#          persistentVolumeClaim:
#            claimName: "jenkins-volume-claim"
#            readOnly: false
