kubernetes/service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-lb
  namespace: default
  labels:
    app: jenkins
spec:
  type: LoadBalancer
  ports:
    - name: http
      nodePort: 31980
      port: 80
      targetPort: 8080
  selector:
    app: jenkins
